feat: added an admin deleteuser handler
